--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.60.0",
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
