--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.20",
     "@types/node": "20.3.3",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
