--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-vertical-timeline-component": "^3.5.3",
     "sass": "^1.69.5",
     "typewriter-effect": "^2.22.0",
     "uuid": "^11.1.0",
@@ -48,6 +49,7 @@
     "@types/node": "20.3.3",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
